switch to final Mayor Amor video

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <center>
       <p>
         <!-- <iframe src="https://drive.google.com/file/d/1QR2TA9y7o6mXedLjIYNC31pVsoLqgXxe/preview" width="640" height="480" allow="autoplay"></iframe> -->
-        <iframe src='//players.brightcove.net/1241706627001/default_default/index.html?videoId=6006757700001' width="640" height="480" allow="autoplay"></iframe>
-      </p>
+        <iframe src='//players.brightcove.net/1241706627001/default_default/index.html?videoId=6369983508112' width="640" height="480" allow="autoplay"></iframe>      </p>
       <a href="https://www.churchofjesuschrist.org/welcome/find-a-church?lang=spa">¡Haz clic aquí para encontrar un servicio Pascual cerca de ti!</a>
     </center>
 </body>
